# umami-proxy

./: .env.example  .gitignore  Cargo.toml  Features.org  README.md  README.org  conf.yaml  flake.nix  k8s.nix  k8s.rs  loadtest.js  nais.yaml  spec-dev.nix  spec.nix  verb.http  verb.org
.github/workflows/: nix-dev.yaml  nix.yaml
conf/: conf.yaml
nginx/: Dockerfile  nginx.conf
src/: annotate.rs  cache.rs  config.rs  errors.rs  health.rs  k8s.rs  main.rs  metrics.rs  probes.rs  proxy.rs  redact.rs  trace.rs  tracing.rs
src/k8s/: cache.rs
src/proxy/: amplitude.rs  annotate.rs  privacy.rs  redact.rs  route.rs  validate.rs
tooling/: README.md  verb.http  verb.org
tooling/bruno/: bruno.json  filter PII.bru  send event.bru  too long field (advanced) and PII.bru  too long field (advanced).bru  too long field.bru
tooling/bruno/environments/: umami-dev.bru  umami-localhost.bru
