[package]
name = "amplitrude-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bytes = "1.7.1"
env_logger = "0.11.5"
futures = "0.3.30"
http = "1.1.0"
isbot = "0.1.3"
itertools = "0.13.0"
k8s-openapi = { version = "0.23.0", features = ["v1_28"] }
kube = { version = "0.95.0", default-features = false, features = ["client", "openssl-tls", "derive", "runtime"] }
lazy_static = "1.5.0"
lru = "0.12.4"
once_cell = "1.20.1"
pingora = { version = "0.3.0", features = ["proxy", "cache"] }
prometheus = "0.13.4"
ptrie = "0.7.1"
regex = "1.10.6"
schemars = "0.8.21"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
