[package]
name = "umami-proxy"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bytes = "1.7.1"
futures = "0.3.30"
isbot = "0.1.3"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", default-features = false, features = ["client", "openssl-tls", "derive", "runtime"] }
lru = "0.16.1"
once_cell = "1.20.1"
pingora = { version = "0.6.0", features = ["proxy", "cache"] }
prometheus = "0.14.0"
ptrie = "0.7.1"
regex = "1.10.6"
fancy-regex = "0.14"
schemars = "0.8.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4"
